log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 02:42:14 PM UTC: 
 tests:  0|6
total_score: 0/70
fb8050b
Thu 30 Mar 2023 02:49:55 PM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
5005b57
Thu 30 Mar 2023 02:53:17 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
2224bcd
Thu 30 Mar 2023 02:59:47 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
bcf5c1c
Thu 30 Mar 2023 03:00:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
cf04e58
Thu 30 Mar 2023 03:04:54 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:29:29: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   29 |   l->data = (void *)realloc(2*sizeof(void));
      |                             ^~~~~~~~~~~~~~
      |                             |
      |                             long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:29:21: error: too few arguments to function ‘realloc’
   29 |   l->data = (void *)realloc(2*sizeof(void));
      |                     ^~~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:14: note: declared here
  551 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
72ac705
Thu 30 Mar 2023 03:07:08 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b693860
Thu 30 Mar 2023 03:08:15 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4ef9655
Thu 30 Mar 2023 07:13:46 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:43:1: error: expected ‘(’ before ‘}’ token
   43 | }
      | ^
      | (
Compilation failed
71e071f
Thu 30 Mar 2023 07:13:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
ba403aa
Thu 30 Mar 2023 07:16:09 PM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
2594182
Thu 30 Mar 2023 07:16:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
aa98f39
Thu 30 Mar 2023 07:16:49 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
19a3b27
Thu 30 Mar 2023 07:17:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
45a288a
Thu 30 Mar 2023 07:29:48 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
43f90c8
Thu 30 Mar 2023 07:30:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
116851d
Thu 30 Mar 2023 07:39:27 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f34d207
Thu 30 Mar 2023 07:39:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
49e1092
